apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
android {
    compileSdk 34
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "uk.org.openseizuredetector"
        minSdkVersion 23
        targetSdkVersion 33
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        manifestPlaceholders.OPENSEIZUREDETECTOR_PACKAGE_NAME = "uk.org.openseizuredetector"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }

    testOptions {
        unitTests.returnDefaultValues = true
        unitTests {
            includeAndroidResources = true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    packagingOptions {
        resources.excludes.add("META-INF/*")
    }
    namespace 'uk.org.openseizuredetector'
    buildFeatures {
        viewBinding true
    }
    buildToolsVersion '34.0.0'
}

dependencies {
    constraints {
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
        }
        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
        }
    }
    implementation 'androidx.multidex:multidex:2.0.1'
    //implementation files('libs/mpandroidchartlibrary-2-0-7.jar')
    //implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    // V2.1.3 of MPAndroidChart is the most recent version that compiles without modifying
    // how we use ValueFormatter
    // FIXME: Update mainactivity so we can use the latest version.
    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.3'
    implementation 'com.getpebble:pebblekit:4.0.1@aar'
    // Unit testing dependencies
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.firebase:firebase-auth:22.3.0'
    implementation 'androidx.test:core:1.6.0-alpha04'
    implementation 'com.google.android.gms:play-services-tflite-java:16.1.0'
    implementation 'com.google.android.gms:play-services-tflite-support:16.1.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    // google play services used for location finding for SMS alerts.
    //implementation 'com.google.android.gms:play-services:+'
    implementation 'com.google.android.gms:play-services-wearable:18.1.0'
    implementation 'com.github.wendykierp:JTransforms:3.1'
    implementation 'com.google.android.gms:play-services-location:21.0.1'
    //implementation 'com.github.RohitSurwase.UCE-Handler:uce_handler:1.3'
    implementation 'com.android.volley:volley:1.2.1'
    implementation platform('com.google.firebase:firebase-bom:32.7.0')
    implementation 'com.google.firebase:firebase-analytics:21.5.0'
    implementation 'com.firebaseui:firebase-ui-auth:8.0.2'
    implementation 'com.google.firebase:firebase-firestore:24.10.0'
    implementation 'androidx.navigation:navigation-fragment:2.7.6'
    implementation 'androidx.navigation:navigation-ui:2.7.6'
    implementation 'androidx.preference:preference:1.2.1'

    //implementation to read Json Arrays instantly
    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'

    //implementation for Timerless operation:
    // Work Manager and worker: used instead of Services
    implementation 'androidx.work:work-runtime:2.9.0'
    implementation 'androidx.work:work-multiprocess:2.9.0'
    //implentation for livedata
    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.2'

    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
    testImplementation 'androidx.test:runner:1.6.0-alpha05'
    testImplementation 'junit:junit:4.13.2'
    // Set this dependency if you want to use Mockito
    testImplementation 'org.mockito:mockito-core:5.8.0'
    // Set this dependency if you want to use Hamcrest matching
    testImplementation 'org.hamcrest:hamcrest-library:2.2'
    testImplementation 'org.robolectric:robolectric:4.11.1'
    testImplementation 'androidx.test:core:1.6.0-alpha04'
    testImplementation 'androidx.test:rules:1.6.0-alpha02'
    testImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
    androidTestImplementation 'androidx.test:monitor:1.7.0-alpha03'

    //androidTestImplementation 'androidx.test:core:1.1.0'
    //androidTestImplementation 'androidx.test:runner:1.1.1'
    //androidTestImplementation 'androidx.test:rules:1.1.1'
    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
    //androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.1'
    implementation 'com.techyourchance:threadposter:1.0.1'
    implementation 'com.google.android.material:material:1.12.0-alpha02'
    androidTestImplementation 'androidx.test:runner:1.6.0-alpha05'
    androidTestImplementation 'junit:junit:4.13.2'
    // Set this dependency if you want to use Mockito
    androidTestImplementation 'org.mockito:mockito-core:5.8.0'
    // Set this dependency if you want to use Hamcrest matching
    androidTestImplementation 'org.hamcrest:hamcrest-library:2.2'
    androidTestImplementation 'org.robolectric:robolectric:4.11.1'
    androidTestImplementation 'androidx.test:core:1.5.0'
    androidTestImplementation 'androidx.test:rules:1.6.0-alpha02'
    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
    androidTestImplementation 'androidx.test:monitor:1.7.0-alpha03'
    debugImplementation 'androidx.fragment:fragment-testing-manifest:1.7.0-alpha07'
    androidTestImplementation 'androidx.fragment:fragment-testing:1.7.0-alpha07'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
    testDebugImplementation 'org.junit.platform:junit-platform-runner:1.10.1'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
}

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/groups/public/" }
}
